--- a/src/WebUi/Features/Home/Index.cshtml
+++ b/src/WebUi/Features/Home/Index.cshtml
@@ -1,12 +1,8 @@
 ﻿@model IEnumerable<Errs.WebUi.Features.Home.ErrorsResponse>
 @{
     ViewBag.Title = "Serilog Demo";
+    ViewBag.SubTitle = "A lap with Structured Logging";
 }
-<div class="row">
-    <div class="large-12 columns">
-        <h1>@ViewBag.Title <small>A lap with Structured Logging</small></h1>
-    </div>
-</div>
 
 <div class="row">
     <div class="large-8 columns">
