--- a/src/WebUi/Features/Errors/Index.cshtml
+++ b/src/WebUi/Features/Errors/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@model HandleErrorInfo
+@{
     ViewBag.Title = "Oops! Err!";
     ViewBag.SubTitle = "Application Exceptions";
 }
+
+@Html.RenderPartial("_RecursiveException", Model)
