--- a/src/WebUi/Features/Shared/_BaseLayout.cshtml
+++ b/src/WebUi/Features/Shared/_BaseLayout.cshtml
@@ -9,7 +9,7 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     
     @Styles.Render("~/Content/foundation/css")
-    @Styles.Render("~/Content/app")
+    @Styles.Render("~/bundles/css")
 
     @RenderSection("head", required: false)
 
