--- a/src/WebUi/Features/Errors/NotAuthorized.cshtml
+++ b/src/WebUi/Features/Errors/NotAuthorized.cshtml
@@ -1,4 +1,4 @@
-﻿@model HandleErrorInfo
+﻿@model Errs.WebUi.Features.Shared.ErrorInfo
 @{
     ViewBag.Title = "Not Authorized";
     ViewBag.SubTitle = "You are not authorized to view this page";
