--- a/src/WebUi/Features/Errors/NotFound.cshtml
+++ b/src/WebUi/Features/Errors/NotFound.cshtml
@@ -1,4 +1,4 @@
-﻿@model HandleErrorInfo
+﻿@model Errs.WebUi.Features.Shared.ErrorInfo
 @{
     ViewBag.Title = "404!";
     ViewBag.SubTitle = "Page Not Found";
