--- a/src/WebUi/Features/Home/Index.cshtml
+++ b/src/WebUi/Features/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="large-8 columns">
-        <table>
+        <table class="table table-striped table-hover">
             <thead>
                 <tr>
                     <th>Message</th>
