--- a/src/WebUi/Features/Home/Index.cshtml
+++ b/src/WebUi/Features/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<Errs.WebUi.Features.Home.ErrorsResponse>
+﻿@using Errs.WebUi.Infrastructure.Utility;
+
+@model IEnumerable<Errs.WebUi.Features.Home.ErrorsResponse>
+
 @{
     ViewBag.Title = "Serilog Demo";
     ViewBag.SubTitle = "A lap with Structured Logging";
@@ -25,7 +28,12 @@
                         <td>@error.MessageTemplate</td>
                         <td>@error.Exception</td>
                         <td>@error.Level</td>
-                        <td>@error.Properties</td>
+                        <td>
+                            @foreach (var prop in error.Properties.GetProperties())
+                            {
+                                <strong> @prop.Key = </strong> @prop.Value<br />
+                            }
+                        </td>
                         <td>@error.TimeStamp</td>
                     </tr>
                 }
@@ -43,3 +51,4 @@
 <br />
 <br />
 <br />
+
